[tool.poetry]
name = "stockx-prices"
version = "0.1.0"
description = "Search for a product in stockx and pull the price history."
authors = ["Moses <mail@moseswynn.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.4.12"
requests = "^2.28.1"
rich = "^12.6.0"
deepdiff = "^5.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
